Bug 510775 - On/off switch can be uselessly interacted with when there are no users configured for RDP usage
Summary: On/off switch can be uselessly interacted with when there are no users config...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_krdpserver (other bugs)
Version First Reported In: 6.5.80
Platform: KDE Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2025-10-19 04:23 UTC by Nate Graham
Modified: 2025-11-07 23:11 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2025-10-19 04:23:19 UTC
SOFTWARE/OS VERSIONS
Operating System: KDE Linux 2025-10-17
KDE Plasma Version: 6.5.80
KDE Frameworks Version: 6.20.0
Qt Version: 6.10.0
Kernel Version: 6.17.2-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 7840U w/ Radeon™ 780M Graphics
Memory: 16 GiB of RAM (14.9 GiB usable)
Graphics Processor: AMD Radeon 780M Graphics


STEPS TO REPRODUCE
1. Have the KCM in its default state (1 or more system users, none checked; no additional users)
2. Click the on/off switch to turn on the server


OBSERVED RESULT
The switch turns on and then immediately turns off again, with no explanation. `systemctl status --user app-org.kde.krdpserver.service` reveals what happened:

Oct 17 14:35:35 engine krdpserver[43762]: No users configured for login. Either pass a username/password or configure users using kcm_krdp.

The switch should be disabled when there are no valid users (with a tooltip explaining why).
Comment 1 Akseli Lahtinen 2025-10-20 09:17:59 UTC
Can confirm

Operating System: Fedora Linux 42
KDE Plasma Version: 6.5.80
KDE Frameworks Version: 6.19.0
Qt Version: 6.9.2
Kernel Version: 6.16.12-200.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 16 GiB of RAM (15.5 GiB usable)
Graphics Processor: AMD Radeon RX 6600
Comment 2 Bug Janitor Service 2025-10-20 14:49:29 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/krdp/-/merge_requests/135
Comment 3 Akseli Lahtinen 2025-11-06 08:16:25 UTC
Git commit bb4c9a0fc51bf67df58f9485c4093a9dcc282385 by Akseli Lahtinen.
Committed on 06/11/2025 at 08:16.
Pushed by akselmo into branch 'master'.

StartupFailureDialog: Show error inline message if KRDP fails to start

When starting krdpserver systemd unit, receive its state and handle it accordingly.
On failure, we show an inline message with the error from the units journal entry.
Related: bug 510776

M  +3    -0    CMakeLists.txt
A  +28   -0    cmake/FindSystemd.cmake
M  +1    -0    src/kcm/CMakeLists.txt
M  +162  -7    src/kcm/kcmkrdpserver.cpp
M  +42   -2    src/kcm/kcmkrdpserver.h
M  +27   -6    src/kcm/ui/main.qml

https://invent.kde.org/plasma/krdp/-/commit/bb4c9a0fc51bf67df58f9485c4093a9dcc282385