StartupFailureDialog: Show popup if KRDP fails to start

This shows a popup whenever KRDP fails to start. Common cause
for this is lacking any users with passwords.

BUG: 510775